header nav links spacing correction

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,7 +2,7 @@
 
 .page-header {
   background-color: rgba($color: $neutralBlack, $alpha: 0.85);
-  padding: 1.5rem 0;
+  padding: 1.5rem;
   color: $neutralWhite;
   font-family: $primaryType;
   position: fixed;
@@ -14,7 +14,7 @@
   z-index: 10;
   //   box-shadow: 0px 4px 11px -2px rgb(0 0 0 / 25%);
   @media only screen and (max-width: $desktopSmall) {
-    padding: 1rem 0;
+    padding: 1rem;
   }
 
   .flex-container {
@@ -40,7 +40,8 @@
 
   .nav-links {
     // width: 55%;
-    flex: 1;
+    // flex: 1;
+    column-gap: 1.5rem;
     font-weight: $medium;
 
     .link {
